--- a/app/src/main/res/layout/repository_item.xml
+++ b/app/src/main/res/layout/repository_item.xml
@@ -43,8 +43,8 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
                     android:id="@+id/iv_share"
                     android:layout_gravity="center"
                     android:src="@android:drawable/ic_menu_share"/>
@@ -57,8 +57,8 @@
                     tools:text="562" />
 
                 <ImageView
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
                     android:id="@+id/iv_star"
                     android:layout_gravity="center"
                     android:layout_marginLeft="10dp"
@@ -76,13 +76,13 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="0.7">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="center_horizontal"
+                android:gravity="center"
                 android:orientation="vertical">
 
                 <ImageView
@@ -90,6 +90,7 @@
                     android:layout_height="32dp"
                     android:id="@+id/ivRepository"
                     android:layout_gravity="center_horizontal"
+                    android:transitionName="avatar"
                     android:src="@mipmap/ic_launcher"/>
 
                 <TextView
