--- a/app/src/main/res/layout/repository_detail.xml
+++ b/app/src/main/res/layout/repository_detail.xml
@@ -10,6 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        android:transitionName="avatar"
         android:id="@+id/iv_avatar"/>
 
     <TextView
